# COMPRESS

./: COMPRESS.py  LICENSE  README.md  pyproject.toml
compress_mol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
script/: extract_params.py  grid.py  init.py  loss.py  update_features.py  write_file.py
script/__pycache__/: update_features.cpython-310.pyc.140347141481104
